src/objects/hed__Course__c.object
<CustomObject>
    <fields>
        <fullName>Course_Identification_System__c</fullName>
        <description>The system used to provide standard course identification codes (EdFi requirement)</description>
        <label>Course Identification System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Parts__c</fullName>
        <description>EdFi requirement: The number of parts offered in this course</description>
        <label>Number of Parts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>EdFi requirement - the type of course being offered.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core Subject</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>